Moved splash to main

--- a/app/src/main/res/navigation/login.xml
+++ b/app/src/main/res/navigation/login.xml
@@ -9,15 +9,20 @@
         app:destination="@id/main_activity"
         app:enterAnim="@anim/enter_from_right"
         app:exitAnim="@anim/exit_to_left"
+        app:launchSingleTop="true"
         app:popEnterAnim="@anim/enter_from_left"
-        app:popExitAnim="@anim/enter_from_right" />
+        app:popExitAnim="@anim/enter_from_right"
+        app:popUpTo="@id/form_fragment"
+        app:popUpToInclusive="true"
+        app:popUpToSaveState="false"
+        app:restoreState="false" />
     <fragment
-        android:id="@id/form_fragment"
+        android:id="@+id/form_fragment"
         android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.LoginFormFragment"
         android:label="Form fragment"
         tools:layout="@layout/fragment_login_form">
         <action
-            android:id="@id/navigate_to_form"
+            android:id="@+id/navigate_to_form"
             app:destination="@id/form_fragment"
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
@@ -25,10 +30,10 @@
             app:popExitAnim="@anim/enter_from_right" />
         <argument
             android:name="navType"
-            app:argType="com.etsisi.appquitectura.domain.enums.LoginNavType"
-            android:defaultValue="LOGIN" />
+            android:defaultValue="LOGIN"
+            app:argType="com.etsisi.appquitectura.domain.enums.LoginNavType" />
         <action
-            android:id="@id/navigate_to_emailVerificationFragment"
+            android:id="@+id/navigate_to_emailVerificationFragment"
             app:destination="@id/email_verification_fragment"
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
@@ -43,7 +48,7 @@
             app:exitAnim="@anim/slide_down" />
     </fragment>
     <fragment
-        android:id="@id/email_verification_fragment"
+        android:id="@+id/email_verification_fragment"
         android:name="com.etsisi.appquitectura.presentation.ui.login.view.formscreen.EmailVerificationFragment"
         android:label="EmailVerificationFragment"
         tools:layout="@layout/fragment_email_verification">
@@ -53,7 +58,7 @@
             app:argType="boolean" />
     </fragment>
     <activity
-        android:id="@id/main_activity"
+        android:id="@+id/main_activity"
         android:name="com.etsisi.appquitectura.presentation.ui.main.view.MainActivity"
         android:label="ActivityMain"
         tools:layout="@layout/activity_main" />
