--- a/app/src/main/res/anim/enter_from_right.xml
+++ b/app/src/main/res/anim/enter_from_right.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shareInterpolator="false">
-    <alpha
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="450" />
-    <translate
-        android:fromXDelta="100%p" android:toXDelta="0%"
-        android:fromYDelta="0%" android:toYDelta="0%"
-        android:duration="300" />
-</set>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@android:integer/config_mediumAnimTime"
+    android:interpolator="@android:anim/decelerate_interpolator"
+    android:fromXDelta="100%"
+    android:toXDelta="0%" />
