--- a/app/src/main/res/layout/fragment_email_verification.xml
+++ b/app/src/main/res/layout/fragment_email_verification.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,19 +11,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="verifica tu email"
-            app:layout_constraintBottom_toTopOf="@+id/btn_go_to_main"
+            app:layout_constraintBottom_toTopOf="@+id/btn_go_to_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_go_to_main"
+            android:id="@+id/btn_go_to_email"
+            style="@style/buttonStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Go to app"
+            android:text="Open your inbox"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/msg" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
