--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.etsisi.appquitectura.presentation.ui.login.viewmodel.LoginViewModel" />
+            type="com.etsisi.appquitectura.presentation.ui.login.viewmodel.BaseLoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
