--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:lineSpacingExtra">2sp</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:textAlignment">textStart</item>
     </style>
 
     <style name="dialog_body">
@@ -48,7 +48,7 @@
         <item name="android:layout_margin">@dimen/dimen_4</item>
         <item name="android:elevation">@dimen/dimen_4</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">#DA5C5555</item>
+        <item name="android:textColor">@color/text_color_primary</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
