--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -38,6 +38,12 @@
                     android:text="@string/register_btn_text"
                     android:textSize="@dimen/text_22" />
 
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/name"
+                    android:text="@={viewModel.name}"/>
+
                 <include
                     android:id="@+id/form"
                     layout="@layout/login_form"
